2005-04-05  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_amsarrayinset.C:
	* math__arrayinset.C:
	* math_decorationinset.C:
	* math_deliminset.C:
	* math_nestinset.C:
	* math_tabularinset.C: Final touch on various corner marker
	positions and inset clickability in math

2005-04-04  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_splitinset.[Ch]: add draw method calling setPosCache,
	to make split-type insets clickable.

2005-04-04  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_amsarrayinset.C:
	* math_casesinset.C:
	* math_gridinset.C:
	* math_gridinset.h: Add drawWithMargin method for use by
	AMSArray and Cases, to position corner markers right

2005-03-31  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* math_amsarrayinset.[Ch], math_tabularinset.[Ch],
	math_splitinset.[Ch] (infoize): implement
	* math_casesinset.C (getStatus, doDispatch): use cmd.argument directly
	* math_gridinset.C (getStatus): ditto
	* math_arrayinset.C (infoize): generalize

2005-03-30  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_amsarrayinset.[Ch] (getStatus):
	* math_splitinset.[Ch] (getStatus):
	* math_substackinset.[Ch]: suppress output of vertical gridlines
	where appropriate

2005-04-03  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_fontinset.[Ch] (draw): add call to setPosCache, 
	fixes bug 1796

2005-04-01  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_data.C (x2pos): fix math cursor positioning bug

2005-03-27  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* math_amsarrayinset.[Ch] (validate): new, require amsmath
	* math_substackinset.[Ch] (validate): ditto
	* math_arrayinset.[Ch] (validate): ditto (in the case of subarray)

2005-03-24  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_hullinset.C:
	* math_casesinset.[Ch]: more precise conditioning of
	output of vertical grid lines

2005-03-22  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_hullinset.C (getStatus): intercept and suppress the
	adding of grid lines in case of a plain equation hull
